--- a/src/app/login/presentation/organism/form/form.scss
+++ b/src/app/login/presentation/organism/form/form.scss
@@ -1,6 +1,6 @@
 .card {
 	width: 350px;
-	height: 360px;
+	height: 400px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -8,4 +8,22 @@
 	gap: 15px;
 	background: #ffffff;
 	border-radius: 8px;
+	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.container-inputs-login{
+	display: flex;
+	flex-direction: column;
+	gap: 35px;
+	height: 60%;
+	justify-content: center;
+}
+
+form{
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
 }
