--- a/src/app/login/presentation/organism/form/form.scss
+++ b/src/app/login/presentation/organism/form/form.scss
@@ -1,6 +1,7 @@
 .card {
-	width: 350px;
-	height: 400px;
+	padding-top: 20px;
+	width: 380px;
+	height: 450px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -27,3 +28,38 @@ form{
 	align-items: center;
 	justify-content: space-around;
 }
+
+@media screen and (max-width: 480px){
+	.card{
+		padding-top: 0px;
+		width: 100%;
+		height: 100vh;
+		display: flex;
+		gap: 15px;
+		background: transparent;
+		border-radius: 8px;
+		box-shadow: none;
+		justify-content: center;
+	}
+	form{
+		height: 50%;
+	}
+}
+
+@media screen and (max-width: 1024px){
+	.card{
+		padding-top: 0px;
+		width: 100%;
+		height: 100vh;
+		display: flex;
+		gap: 15px;
+		background: transparent;
+		border-radius: 8px;
+		box-shadow: none;
+		justify-content: center;
+	}
+	form{
+		height: 50%;
+	}
+}
+
