feat: creation of button molecules, creation of components market and footer

--- a/src/app/home/presentation/molecules/personintro/personIntro.scss
+++ b/src/app/home/presentation/molecules/personintro/personIntro.scss
@@ -23,7 +23,7 @@
 
 }
 
-.title{
+.title-person{
 	font-family: 'Lato';
 	color: white;
 	font-weight: 700px;
@@ -32,7 +32,7 @@
 	font-size: 18px;
 }
 
-.paragraph{
+.paragraph-person{
 	font-family: 'Lato';
 	color: white;
 	margin: 10px 0px 0px ;
