feat: creation organism personintrotwo, creation molecules icon_facebook, icon_instagram, icon_twitter

--- a/src/app/home/presentation/molecules/personintrotwo/personIntroTwo.scss
+++ b/src/app/home/presentation/molecules/personintrotwo/personIntroTwo.scss
@@ -7,24 +7,23 @@
 	src: url('../../../../../assets/Lato-Regular.ttf');
 	font-family: 'Lato';
 }
-.content-wrapper{
+.content-wrapper-girl{
 	padding: 0px 25px 20px ;
 }
-.image-wrapper{
+.image-wrapper-girl{
 	width: 180px;
 	height: 185.5px;
 }
 
-.container{
+.container-girl{
 	background-color: black;
 	display: flex;
-	padding-left: 200px;
-	margin-bottom: 110px;	
+	padding-left: 70px;	
 	
 
 }
 
-.title-person{
+.title-person-girl{
 	font-family: 'Lato';
 	color: white;
 	font-weight: 700px;
@@ -33,7 +32,7 @@
 	font-size: 18px;
 }
 
-.paragraph-person{
+.paragraph-person-girl{
 	font-family: 'Lato';
 	color: white;
 	margin: 10px 0px 0px ;
