--- a/src/app/home/presentation/organism/Market/market.scss
+++ b/src/app/home/presentation/organism/Market/market.scss
@@ -11,6 +11,7 @@
 .section-Rocket {
 	background-color: black;
 	color: white;
+	margin-bottom: 110px;
   }
 
   .empowerment{
@@ -37,6 +38,7 @@
 .IconRocket{
 	align-items: center;
 	text-align: center;
+	
 	
   }
   .grid-icon{
