--- a/src/app/home/presentation/organism/faqcomponent/faqComponent.scss
+++ b/src/app/home/presentation/organism/faqcomponent/faqComponent.scss
@@ -10,6 +10,7 @@
 .faq-component{
 	background-color: black;
 	color: #FFFFFF;
+	margin-bottom: 110px;
 }
 
 
@@ -62,7 +63,7 @@
 .faq-grid {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	gap: 20px; 
+	gap: 140px; 
 	margin-left: 160px;
 	margin-top: 65px;
 	margin-right: 130px;
