--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -1,37 +1,21 @@
 .container-login-page{
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-}
-.login{
-  width: 100%;
-  height: 100vh;
-  display: grid;
-  place-items: center;
-  position: absolute;
-  top: 0px;
-}
-.containerHwaves{
-  transform: rotate(-30deg);
-  width: 200%;
-  height: 100vh;
-  margin-left: -35%;
-  margin-top: -35%;
+  background-color: black;
 }
 
+.section-global{
+  padding-left: 150px;
+  padding-right: 150px;
+}
+
+
+
 @media screen and (max-width: 364px){
-	.containerHwaves{
-    display: none;
-  }
+	
 }
 @media screen and (max-width: 480px){
-	.containerHwaves{
-    margin-left: -60%;
-  }
+	
 }
 
 @media screen and (max-width: 800px){
-	.containerHwaves{
-    margin-left: -60%;
-  }
+	
 }
