--- a/src/app/home/presentation/organism/events-start/eventStart.scss
+++ b/src/app/home/presentation/organism/events-start/eventStart.scss
@@ -22,6 +22,7 @@
 	text-align: center;
     background-color: black;
 	color: white;
+	margin-bottom: 30px;
 	
 }
 	
@@ -62,7 +63,7 @@
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
     color: white;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 1.5;
     padding: 6px 12px;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
@@ -116,11 +117,12 @@
 	padding-left: 120px;
 	padding-right: 120px;
 	color: #fff !important;
-    background-color: #090809 !important;
+    background-color: black !important;
     border-color: #455465!important;
 	font-family: 'Lato-Regular';
 	font-weight: 400;
     line-height: 24px;
+	margin-top: 40px;
 }
 
 
