--- a/src/app/home/presentation/organism/footer/footerJolders.scss
+++ b/src/app/home/presentation/organism/footer/footerJolders.scss
@@ -8,7 +8,10 @@
 	align-items: center;
 	background-color: black;
 	color: white;
-	padding: 20px;
+	padding: 50px;
+  margin-bottom: 40px;
+  
+  
   }
   
   .footer__logo img {
@@ -18,8 +21,9 @@
   
   .footer__menus {
 	display: flex;
-	margin-left: 50px;
+	margin-left: 150px;
 	font-family: 'Lato';
+  gap: 35px;
 	
   }
   
@@ -70,14 +74,34 @@
     padding: 12px;
     color: #ccc;
     font-weight: 300;
-    height: 24px;
-    width: 220px;
+    // height: 24px;
+    // width: 220px;
     display: inline-block;
-	margin-left: 90px;
-	text-align: center;
-	margin-top: 30px;
-	background: #353535 !important;
+	  margin-left: 90px;
+	  text-align: center;
+	  margin-top: 20px;
+	  background: #353535 !important;
     border-color: #455465!important;
     color: #fff !important;
     
   }
+
+  .botton-submit{
+	  transition: .3s;
+    height: 40px;
+	  width: 48px;
+    cursor: pointer;
+	  border: none;
+    padding: 16px 0px;
+    margin-left: 0px;
+    border-radius: 0 3px 3px 0;
+	  background-color:#141414 ;
+  }
+
+  .icon-redes{
+    display: flex;
+    gap: 20px; 
+    margin-top: 40px;
+    margin-left: 700px;
+  }
+ 
