--- a/src/app/home/presentation/organism/input-folder/imputFolder.scss
+++ b/src/app/home/presentation/organism/input-folder/imputFolder.scss
@@ -12,9 +12,9 @@
 	display: block;
 	align-items: center; //Alineación vertical centrada //
 	background-color: #000;
-	padding: 20px;
 	width: 100%;
 	height: 100%;
+	margin-bottom: 130px;
 	}
 	
 	.container-grid{ //contenedor -tittle-paragraph-img
@@ -73,8 +73,8 @@
 	grid-gap: 10px;
 	justify-content: center;
 	align-items: center;
-	padding-left: 80px;
-	padding-right: 80px;
+	padding-left: 100px;
+	padding-right: 100px;
 	}
 	
 	
