--- a/src/app/home/presentation/organism/investor/investor.scss
+++ b/src/app/home/presentation/organism/investor/investor.scss
@@ -10,6 +10,8 @@
 
 
 .content {
+	margin-top: 40px;
+	margin-bottom: 120px;
 	font-family: 'Lato';
 	font-size: 40px;
 	color: white;
@@ -18,10 +20,11 @@
 	display: flex; /* Agregado */
 	flex-direction: column; /* Agregado */
 	align-items: center; /* Agregado */
+	
   }
   
   .conters {
-	padding: 25px 0px 25px 0px;
+	padding: 30px 0px 30px 0px;
 	font-family: 'Lato';
 	height: 115px;
 	width: 100%;
