--- a/src/components/organism/menu_bar/menu_barjolders.scss
+++ b/src/components/organism/menu_bar/menu_barjolders.scss
@@ -1,5 +1,11 @@
+ 
+@font-face {
+	src: url('../../../assets/Montserrat-VariableFont_wght.ttf');
+	font-family: 'Montserrat-VariableFont';
+}
+
 .menuBarjolders {
-	width: 97%;
+	width: 100%;
 	height: 85px;
 	background: black;
 	display: grid;
@@ -13,12 +19,13 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
+	font-family: 'Montserrat-VariableFont';
 	
 
 	img {
-		height: 50px;
+		height: 80px;
+		width: 185px;
 		margin-right: 85px;
-		width: 130px;
 		padding: 9px 0 10px;
 	}
 }
@@ -36,7 +43,7 @@
 		font-family: 'Montserrat';
 		font-style: normal;
 		font-weight: 500;
-		font-size: 14px;
+		font-size: 16px;
 		line-height: 1.2;
 		color: #D19FE8;
 		padding: 0px 12px;
