--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -12,10 +12,21 @@
 @media screen and (max-width: 364px){
 	
 }
-@media screen and (max-width: 480px){
+
+
+@media screen and (min-width: 365px) and (max-width: 480px){
 	
 }
 
-@media screen and (max-width: 800px){
+
+@media screen and (min-width: 481px) and (max-width: 600px){
 	
 }
+
+@media screen and (min-width: 601px) and (max-width: 800px){
+	
+}
+
+
+
+	
