--- a/src/app/home/presentation/molecules/personintro/personIntro.scss
+++ b/src/app/home/presentation/molecules/personintro/personIntro.scss
@@ -15,13 +15,11 @@
 	height: 185.5px;
 }
 
-.container{
+.container-person{
 	background-color: black;
 	display: flex;
 	padding-left: 200px;
 	margin-bottom: 110px;	
-	
-
 }
 
 .title-person{
@@ -41,3 +39,192 @@
 	font-size: 14px;
 	// height: 72px;
 }
+
+@media screen and (max-width: 364px){
+	
+	.container-person{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+		height: auto;
+		padding-left: 0px;
+		
+		}
+	.content-wrapper{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+	
+	}
+	.image-wrapper{
+        margin-top: 20px;
+		width: 100px;
+	    height: 100px;
+	}
+
+	.title-person{
+	   display: flex;
+	   flex-direction: column;
+	   align-items: center;
+       text-align: center;
+	   width: 90%;
+	   margin-top: 20px;
+	   font-size: 13px;
+	}
+	.paragraph-person{
+	   display: flex;
+	   flex-direction: column;
+	   align-items: center;
+	   text-align: center;
+	   width: 90%;
+	   font-size: 12px;
+	   padding: 5px;
+	}
+	
+
+}
+
+
+@media screen and (min-width: 365px) and (max-width: 480px){
+
+	.container-person{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+		height: auto;
+		padding-left: 0px;
+		
+		}
+
+    .content-wrapper{
+	   display: flex;
+	   flex-direction: column;
+		align-items: center;
+		width: 100%;
+	}
+
+	.image-wrapper{
+        margin-top: 20px;
+		width: 100px;
+	    height: 100px;
+	}
+		
+	.title-person{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		width: 90%;
+		margin-top: 20px;
+		font-size: 13px;
+	 }
+
+	 .paragraph-person{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		width: 95%;
+		font-size: 12px;
+		padding: 5px;
+	 }
+	 
+
+}
+
+@media screen and (min-width: 481px) and (max-width: 600px){
+
+	.container-person{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+		height: auto;
+		padding-left: 0px;
+		
+		}
+
+    .content-wrapper{
+	   display: flex;
+	   flex-direction: column;
+		align-items: center;
+		width: 100%;
+	}
+
+	.image-wrapper{
+        margin-top: 20px;
+		width: 100px;
+	    height: 100px;
+	}
+		
+	.title-person{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		width: 100%;
+		margin-top: 20px;
+		font-size: 14px;
+	 }
+
+	 .paragraph-person{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		width: 95%;
+		font-size: 14px;
+		padding: 5px;
+	 }
+	 
+}
+
+
+@media screen and (min-width: 601px) and (max-width: 1024px){
+	.container-person{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+		height: auto;
+		padding-left: 0px;
+		
+		}
+
+    .content-wrapper{
+	   display: flex;
+	   flex-direction: column;
+		align-items: center;
+		width: 100%;
+	}
+
+	.image-wrapper{
+        margin-top: 20px;
+		width: 100px;
+	    height: 100px;
+	}
+		
+	.title-person{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		width: 100%;
+		margin-top: 20px;
+		font-size: 14px;
+	 }
+
+	 .paragraph-person{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		width: 95%;
+		font-size: 14px;
+		padding: 5px;
+	 }
+}
+
