--- a/src/app/home/presentation/organism/header/header.scss
+++ b/src/app/home/presentation/organism/header/header.scss
@@ -32,3 +32,76 @@
 	  }
 	
   }
+
+  @media screen and (max-width: 364px){
+	.header {
+	  display: flex;
+	  flex-direction: column;
+	  align-items: center;
+	}
+	
+	.main {
+	  text-align: center;
+	}
+	
+	.main img {
+	  display: none;
+	}
+	
+	.font {
+	  font-size: 1rem;
+	}
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+//   @media screen and (max-width: 480px){
+// 	.main img {
+// 	  width: 100px;
+// 	  height: 100px;
+// 	}
+	
+// 	.font {
+// 	  font-size: 0.8rem;
+// 	}
+//   }
+
+//   @media screen and (max-width: 800px){
+// 	.menuBarjolders {
+// 	  flex-direction: column;
+// 	  align-items: center;
+// 	  justify-content: space-between;
+// 	  padding: 10px;
+// 	}
+	
+// 	.logoMenuBarjolders {
+// 	  margin-bottom: 10px;
+// 	}
+	
+// 	.optionsMenuBarjolders {
+// 	  display: flex;
+// 	  flex-direction: column;
+// 	  align-items: center;
+// 	}
+	
+// 	.optionsMenuBarjolders a {
+// 	  font-size: 0.8rem;
+// 	}
+//   }
