--- a/src/app/home/presentation/organism/input-folder/imputFolder.scss
+++ b/src/app/home/presentation/organism/input-folder/imputFolder.scss
@@ -22,7 +22,7 @@
 	grid-template-columns:1fr 1fr;
 	}
 
-	.container-botton{
+	.container-titlep{
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
@@ -44,7 +44,7 @@
 	font-weight: 700;
 	width: px;
 	margin: 40px 0px 30px 0px;
-	text-align: center;
+	text-align: start;
 }
 	
 .imput-folder-paragraph {//parrafo
@@ -77,6 +77,76 @@
 	padding-right: 100px;
 	}
 	
+	@media screen and (max-width: 364px){
 	
+		.imput-folder-content-container{
+			margin-top: 10px;
+			margin-left: 0px;
+		}
+		
+	
+		.container-grid{
+		display: flex;
+		margin-top: 5px;
+		flex-direction: column;
+		align-items: center;
+		}
+	   
+		.imput-folder-content-container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+		margin-top: 10px;
+		}
+		
+		.imput-folder-title {
+		display: flex;
+		flex-direction: column;
+		 align-items: center;
+		 text-align: center;
+		 width: 250px;
+		 font-size: 32px;
+		//  margin-right: 140px;
+		 margin-top: 5px;		
+		 }
+	
+		.container-titlep{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+		}
+	
+		.imput-folder-paragraph {
+	
+	
+		}
+		.container-image{
+		   display: none;
+		}
+			
+		
+			
+		
+			
+		.imput-folder-paragraph {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		margin-top: 0px;
+		font-size: 12px;
+		width: 100%;
+		// margin-right: 140px;
+				
+		}
+			
+		.sectionFolder {
+		grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+		}
+	
+        
+		}
 
 
