--- a/src/components/organism/counter/counter.scss
+++ b/src/components/organism/counter/counter.scss
@@ -8,3 +8,16 @@
 	line-height: 60px;
 	font-weight: 700;
 }
+
+@media screen and (max-width: 364px){
+	.count{
+		font-size: 50px;
+	}
+
+}	
+
+@media screen and (max-width: 480px){
+	.count{
+		font-size: 45px;
+	}
+}
