--- a/src/app/home/presentation/organism/events-start/eventStart.scss
+++ b/src/app/home/presentation/organism/events-start/eventStart.scss
@@ -23,6 +23,7 @@
     background-color: black;
 	color: white;
 	margin-bottom: 30px;
+	width: 100%;
 	
 }
 	
@@ -125,7 +126,201 @@
 	margin-top: 40px;
 }
 
+@media screen and (max-width: 364px){
+	.container-event{
+     display: flex;
+	 justify-content: center;
+	 align-items: center;
+	 text-align: center;
+	 padding: 5px;
+	}	
+    .title-event{
+    font-size: 46px;
+	width: 100%;
+	}
 
+	.paragraph-event{
+        font-size: 15px;
+        line-height: 25px;
+		width: 100%;
+	}
+
+	.image-event{
+    display: none;
+	}
+
+	.risk-section{
+	 text-align: center;
+	 width: 100%;
+	 font-size: 12px;
+	 color: #fff !important;
+	 font-weight: 300;
+	 line-height: 22px;
+	 margin-top: 15px;
+	 padding-left: 0px;
+	padding-right: 0px;
+	}
+
+}
+
+
+@media screen and (min-width: 365px) and (max-width: 480px){
+	.container-event{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+		padding: 5px;
+	   }	
+	   .title-event{
+	   font-size: 48px;
+	   width: 100%;
+	   }
+   
+	   .paragraph-event{
+		   font-size: 16px;
+		   line-height: 25px;
+		   width: 100%;
+	   }
+   
+	   .image-event{
+	   display: none;
+	   }
+   
+	   .risk-section{
+		text-align: center;
+		width: 100%;
+		font-size: 14px;
+		color: #fff !important;
+		font-weight: 300;
+		line-height: 23px;
+		margin-top: 15px;
+		padding-left: 0px;
+	   padding-right: 0px;
+	   }
+}
+
+
+@media screen and (min-width: 481px) and (max-width: 600px){
+	
+	.container-event{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+		padding: 5px;
+	   }	
+	   .title-event{
+	   font-size: 48px;
+	   width: 100%;
+	   }
+   
+	   .paragraph-event{
+		   font-size: 16px;
+		   line-height: 25px;
+		   width: 100%;
+	   }
+   
+	   .image-event{
+	   display: none;
+	   }
+   
+	   .risk-section{
+		text-align: center;
+		width: 100%;
+		font-size: 14px;
+		color: #fff !important;
+		font-weight: 300;
+		line-height: 23px;
+		margin-top: 15px;
+		padding-left: 0px;
+	   padding-right: 0px;
+	   }
+}
+
+@media screen and (min-width: 601px) and (max-width: 800px){
+	
+	.container-event{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+		padding: 5px;
+	   }	
+	   .title-event{
+	   font-size: 48px;
+	   width: 100%;
+	   }
+   
+	   .paragraph-event{
+		   font-size: 16px;
+		   line-height: 25px;
+		   width: 100%;
+	   }
+   
+	   .image-event{
+	   display: flex;
+	   justify-content: center; 
+	   width: 550px;
+
+	   }
+   
+	   .risk-section{
+		text-align: center;
+		width: 100%;
+		font-size: 14px;
+		color: #fff !important;
+		font-weight: 300;
+		line-height: 23px;
+		margin-top: 15px;
+		padding-left: 0px;
+	   padding-right: 0px;
+	   }
+}
+
+@media screen and (min-width: 801px) and (max-width: 999px){
+	
+
+	.container-event{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+		padding: 5px;
+	   }	
+	   .title-event{
+	   font-size: 52px;
+	   width: 100%;
+	   }
+   
+	   .paragraph-event{
+		   font-size: 24px;
+		   line-height: 25px;
+		   width: 100%;
+	   }
+   
+	   .image-event{
+	   display: flex;
+	   justify-content: center; 
+	   width: 650px;
+
+	   }
+   
+	   .risk-section{
+		text-align: center;
+		width: 100%;
+		font-size: 16px;
+		color: #fff !important;
+		font-weight: 300;
+		line-height: 23px;
+		margin-top: 15px;
+		padding-left: 0px;
+	   padding-right: 0px;
+	   }
+
+
+
+}
 
 
 
