--- a/src/app/home/presentation/organism/input-folder/imputFolder.scss
+++ b/src/app/home/presentation/organism/input-folder/imputFolder.scss
@@ -44,7 +44,7 @@
 	font-weight: 700;
 	width: px;
 	margin: 40px 0px 30px 0px;
-	text-align: start;
+	margin-left: 50px;
 }
 	
 .imput-folder-paragraph {//parrafo
@@ -105,10 +105,9 @@
 		flex-direction: column;
 		 align-items: center;
 		 text-align: center;
-		 width: 250px;
+		 width: 100%;
 		 font-size: 32px;
-		//  margin-right: 140px;
-		 margin-top: 5px;		
+		 margin-top: 2px;		
 		 }
 	
 		.container-titlep{
@@ -118,35 +117,231 @@
 			text-align: center;
 		}
 	
-		.imput-folder-paragraph {
-	
-	
-		}
 		.container-image{
 		   display: none;
 		}
 			
 		
-			
-		
-			
 		.imput-folder-paragraph {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		text-align: center;
 		margin-top: 0px;
-		font-size: 12px;
-		width: 100%;
-		// margin-right: 140px;
-				
+		font-size: 14px;
+		width: 90%;	
 		}
 			
 		.sectionFolder {
 		grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-		}
+		margin-bottom: 10px;
+	    }
 	
-        
 		}
 
+
+     @media screen and (min-width: 365px) and (max-width: 480px){
+	.imput-folder-container{
+    	display: flex;
+		flex-direction: column;
+		margin-top: 10px;
+		margin-left: 0px;
+
+	}
+     
+	.container-grid{
+		display: flex;
+		margin-top: 5px;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.imput-folder-content-container{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+		margin-top: 10px;
+		margin-left: 0px;
+	}
+
+	.imput-folder-title{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		width: 100%;
+		font-size: 32px;
+		margin-top: 2px;
+
+	}
+
+	.container-titlep{
+    	display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+	}
+
+	.imput-folder-paragraph{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		margin-top: 0px;
+		font-size: 16px;
+		width: 95%;
+	}
+    
+	.container-image{
+    display: none;
+	}
+
+	.sectionFolder{
+	grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+	margin-bottom: 10px;
+	}
+    
+    }
+
+
+	@media screen and (min-width: 481px) and (max-width: 600px){
+		.imput-folder-container{
+			display: flex;
+			flex-direction: column;
+			margin-top: 10px;
+			margin-left: 0px;
+	
+		}
+		 
+		.container-grid{
+			display: flex;
+			margin-top: 5px;
+			flex-direction: column;
+			align-items: center;
+		}
+	
+		.imput-folder-content-container{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			width: 100%;
+			margin-top: 10px;
+			margin-left: 0px;
+		}
+	
+		.imput-folder-title{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+			width: 100%;
+			font-size: 32px;
+			margin-top: 2px;
+	
+		}
+	
+		.container-titlep{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+		}
+	
+		.imput-folder-paragraph{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+			margin-top: 0px;
+			font-size: 16px;
+			width: 95%;
+		}
+		
+		.container-image{
+		display: flex;
+		}
+	
+		.sectionFolder{
+		grid-template-columns: repeat(auto-fit, minmax(140px, 2fr));
+		margin-bottom: 10px;
+		}
+
+		.imput-folder-image{
+			width: 434px;
+			height: 850px;
+		}
+
+
+	}
+	
+	@media screen and (min-width: 601px) and (max-width: 992px){
+		
+		.imput-folder-container{
+			display: flex;
+			flex-direction: column;
+			margin-top: 10px;
+			margin-left: 0px;
+	
+		}
+		 
+		.container-grid{
+			display: flex;
+			margin-top: 5px;
+			flex-direction: column;
+			align-items: center;
+		}
+	
+		.imput-folder-content-container{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			width: 100%;
+			margin-top: 10px;
+			margin-left: 0px;
+		}
+	
+		.imput-folder-title{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+			width: 100%;
+			font-size: 32px;
+			margin-top: 2px;
+	
+		}
+	
+		.container-titlep{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+		}
+	
+		.imput-folder-paragraph{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+			margin-top: 0px;
+			font-size: 16px;
+			width: 95%;
+		}
+		
+		.container-image{
+		display: flex;
+		}
+	
+		.sectionFolder{
+		grid-template-columns: repeat(auto-fit, minmax(140px, 3fr));
+		margin-bottom: 10px;
+		}
+
+		.imput-folder-image{
+			width: 534px;
+			height: 950px;
+		}
+
+	}
 
