--- a/src/components/molecules/component-Market/componentMarket.scss
+++ b/src/components/molecules/component-Market/componentMarket.scss
@@ -28,8 +28,88 @@
   .title-2{
 	font-family: 'Montserrat-VariableFont_wght';
 	padding: 15px;
-	font-weight: 500;
+	font-weight: 500px;
 	font-size: 18px;
     line-height: 1.39em;
     letter-spacing: 0px;
+  }
+
+  @media screen and (max-width: 364px){
+	.ComponentMarket{
+		width: 100%;
+	}
+
+	.paragraph-body2{
+		width: 200px;
+
+	}
+
+	.title-2{
+		padding: 8px;
+		font-size: 16px;
+		width: 100%;
+
+	}
+	
+  }
+  
+  @media screen and (min-width: 365px) and (max-width: 480px){
+	
+	.ComponentMarket{
+		width: 100%;
+	}
+
+	.paragraph-body2{
+		width: 300px;
+
+	}
+
+	.title-2{
+		padding: 8px;
+		font-size: 18px;
+		width: 100%;
+
+	}
+
+  }
+
+
+  @media screen and (min-width: 481px) and (max-width: 600px){
+	.ComponentMarket{
+		width: 100%;
+	}
+
+	.paragraph-body2{
+		width: 185px;
+
+	}
+
+	.title-2{
+		padding: 8px;
+		font-size: 18px;
+		width: 100%;
+
+	}
+
+
+  }
+
+  @media screen and (min-width: 601px) and (max-width: 999px){
+	
+	.ComponentMarket{
+		width: 100%;
+	}
+
+	.paragraph-body2{
+		width: 250px;
+
+	}
+
+	.title-2{
+		padding: 8px;
+		font-size: 18px;
+		width: 100%;
+
+	}
+
   }
