feat: Modification @mediaqueries cardstarups

--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -10,25 +10,67 @@
 
 
 @media screen and (max-width: 364px){
-	
+	.container-login-page{
+    background-color: black;
+  }
+  
+  .section-global{
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  
 }
 
 
 @media screen and (min-width: 365px) and (max-width: 480px){
 	
+  .container-login-page{
+    background-color: black;
+  }
+  
+  .section-global{
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  
 }
 
 
 @media screen and (min-width: 481px) and (max-width: 600px){
 	
+  .container-login-page{
+    background-color: black;
+  }
+  
+  .section-global{
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  
 }
 
 @media screen and (min-width: 601px) and (max-width: 800px){
-	
+	.container-login-page{
+    background-color: black;
+  }
+  
+  .section-global{
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  	
 }
 
 @media screen and (min-width: 801px) and (max-width: 999px){
-	
+  .container-login-page{
+    background-color: black;
+  }
+  
+  .section-global{
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  
 }
 
 	
