--- a/src/app/home/presentation/organism/cardstartups/cardStartUps.scss
+++ b/src/app/home/presentation/organism/cardstartups/cardStartUps.scss
@@ -30,6 +30,7 @@ border: solid 4px #ebebf1;
 }
 
 .startupName{
+	text-align: center;
 	transition: 400ms;
     -webkit-transition: 400ms;
     font-size: 20px;
@@ -48,7 +49,6 @@ border: solid 4px #ebebf1;
 
 .imgcardStartUp{
 	width: 100%;
-	height: 100%;
 }
 .currentInvestment{
 font-family: 'Lato';
@@ -69,50 +69,146 @@ padding: 20px 15px 20px;
 @media screen and (max-width: 364px){
 
 	.cardStartUp{
-		width: 90%;
-		height: 90%;
-
+	width: 220px;
+    height: 500px;
 	}
-
+	.category{
+	    font-size: 12px;
+	    letter-spacing: -0.2px;
+		color: #d19fe8;
+		padding: 30px 30px 0px;
+	}
 	.startupName{
-		width: 90%;
-		height: 90%;
+    align-items: center;
+	padding: 10px 10px 0px;
+	text-align: center;
+    font-size: 18px;
+    line-height: 1.10;
+    letter-spacing: -0.3px;
+	width: 200px;
+	height: 84px;
+		
 	}
 }
 
 @media screen and (min-width: 365px) and (max-width: 480px){
 	.cardStartUp{
-		width: 90%;
-		height: 90%;
-    }
- 
-	.startupName{
-		width: 90%;
-		height: 90%;
-	}
+		width: 262px;
+        height: 480px;
+		}
+		.category{
+			font-size: 12px;
+			letter-spacing: -0.2px;
+			color: #d19fe8;
+			padding: 30px 30px 0px;
+		}
+		.startupName{
+		align-items: center;
+		padding: 10px 10px 0px;
+		text-align: center;
+		font-size: 18px;
+		line-height: 1.10;
+		letter-spacing: -0.3px;
+		width: 250px;
+		height: 64px;
+			
+		}
 
 }
 
 @media screen and (min-width: 481px) and (max-width: 600px){
 	.cardStartUp{
-		width: 90%;
-		height: 90%;
-    }
-	.startupName{
-		width: 90%;
-		height: 90%;
-	}
+		width: 210px;
+        height: 415px;
+		}
+		.category{
+			font-size: 12px;
+			letter-spacing: -0.1px;
+			color: #d19fe8;
+			padding: 0px 30px 0px;
+		}
+		.startupName{
+		align-items: center;
+		padding: 10px 10px 0px;
+		text-align: center;
+		font-size: 14px;
+		line-height: 1.10;
+		letter-spacing: -0.3px;
+		width: 185px;
+		height: 35px;
+			
+		}
 
 }
 
-@media screen and (min-width: 601px) and (max-width: 1200px){
+@media screen and (min-width: 601px) and (max-width: 800px){
 	.cardStartUp{
-		width: 90%;
-		height: 90%;
-    }
-	.startupName{
-		width: 90%;
-		height: 90%;
-	}
+		width: 270px;
+        height: 480px;
+		}
+		.category{
+			font-size: 12px;
+			letter-spacing: -0.2px;
+			color: #d19fe8;
+			padding: 30px 30px 0px;
+		}
+		.startupName{
+		align-items: center;
+		padding: 10px 10px 0px;
+		text-align: center;
+		font-size: 20px;
+		line-height: 1.10;
+		letter-spacing: -0.3px;
+		width: 250px;
+		height: 60px;
+			
+		}
+}
 
+@media screen and (min-width: 801px) and (max-width: 900px){
+	.cardStartUp{
+		width: 240px;
+        height: 480px;
+		}
+		.category{
+			font-size: 12px;
+			letter-spacing: -0.2px;
+			color: #d19fe8;
+			padding: 30px 30px 0px;
+		}
+		.startupName{
+		align-items: center;
+		padding: 10px 10px 0px;
+		text-align: center;
+		font-size: 18px;
+		line-height: 1.10;
+		letter-spacing: -0.3px;
+		width: 200px;
+		height: 60px;
+			
+		}
+}
+
+@media screen and (min-width: 901px) and (max-width: 1140px){
+	.cardStartUp{
+		width: 275px;
+        height: 480px;
+		}
+		.category{
+			font-size: 12px;
+			letter-spacing: -0.2px;
+			color: #d19fe8;
+			padding: 30px 30px 0px;
+		}
+		.startupName{
+		align-items: center;
+		padding: 10px 10px 0px;
+		text-align: center;
+		font-size: 20px;
+		line-height: 1.10;
+		letter-spacing: -0.3px;
+		width: 230px;
+		height: 70px;
+			
+		}
 }
