--- a/src/app/home/presentation/organism/startup-sections/startUpSections.scss
+++ b/src/app/home/presentation/organism/startup-sections/startUpSections.scss
@@ -94,7 +94,7 @@
 	  text-align: center;
 	  color: #FFFFFF;
 	  margin-bottom: 0px;
-	  margin-left: 17px
+	//   margin-left: 17px
 	}
   }
   
@@ -148,7 +148,7 @@
 		text-align: center;
 		color: #FFFFFF;
 		margin-bottom: 0px;
-		margin-left: 28px
+		// margin-left: 28px
 
 	  }
 	
@@ -205,7 +205,7 @@
 		text-align: center;
 		color: #FFFFFF;
 		margin-bottom: 0px;
-		margin-left: 28px
+		// margin-left: 28px
 
 	  }
   }
@@ -260,7 +260,7 @@
 		text-align: center;
 		color: #FFFFFF;
 		margin-bottom: 0px;
-		margin-left: 28px
+		// margin-left: 28px
 
 	  }
   }
