--- a/src/components/molecules/cardfooter/cardfooter.scss
+++ b/src/components/molecules/cardfooter/cardfooter.scss
@@ -42,3 +42,200 @@
 	font-family: "Lato";
 }
 
+@media screen and (max-width: 364px){
+	.cardsfooter{
+		width: 100%;
+		height: 40px;
+		
+	}
+	
+	.headCard{
+		font-size: 16px;
+		font-weight: 500;
+		margin-bottom: 8px;
+	}
+	.cardbody{
+		font-size: 12px;
+		font-weight: 400;
+	
+}
+
+@media screen and (min-width: 365px) and (max-width: 480px){
+	.cardsfooter{
+		
+		width: 100%;
+		height: 47px;
+		
+	}
+	
+	.headCard{
+		font-size: 18px;
+		font-weight: 600;
+		font-style: normal;
+		font-stretch: normal;
+		line-height: normal;
+		letter-spacing: normal;
+		color: #ebebf1;
+		font-family: "Jura";
+		text-align: center;
+		margin-bottom: 10px;
+	}
+	.cardbody{
+		font-size: 14px;
+		font-weight: 500;
+		font-style: normal;
+		font-stretch: normal;
+		line-height: normal;
+		letter-spacing: normal;
+		text-align: center;
+		color: #ebebf1;
+		font-family: "Lato";
+	}
+}
+
+@media screen and (min-width: 481px) and (max-width: 600px){
+
+	.cardsfooter{
+		width: 100%;
+		height: 47px;
+		
+	}
+	
+	.headCard{
+		font-size: 16px;
+		font-weight: 600;
+		font-style: normal;
+		font-stretch: normal;
+		line-height: normal;
+		letter-spacing: normal;
+		color: #ebebf1;
+		font-family: "Jura";
+		text-align: center;
+		margin-bottom: 10px;
+	}
+	.cardbody{
+		font-size: 14px;
+		font-weight: 500;
+		font-style: normal;
+		font-stretch: normal;
+		line-height: normal;
+		letter-spacing: normal;
+		text-align: center;
+		color: #ebebf1;
+		font-family: "Lato";
+	}
+}
+
+@media screen and (min-width: 601px) and (max-width: 800px){
+	// .cardsfooter{
+	// 	border: solid 1px #ebebf1;
+	// 	width: 100%;
+	// 	height: 95px;
+	// 	background-color: black;
+	// 	display: flex;
+	// 	flex-direction: row;
+	// 	justify-content: space-evenly;
+	// 	align-items: center; //alinear  columna 
+	// }
+	
+	// .headCard{
+	// 	font-size: 18px;
+	// 	font-weight: 600;
+	// 	font-style: normal;
+	// 	font-stretch: normal;
+	// 	line-height: normal;
+	// 	letter-spacing: normal;
+	// 	color: #ebebf1;
+	// 	font-family: "Jura";
+	// 	text-align: center;
+	// 	margin-bottom: 10px;
+	// }
+	// .cardbody{
+	// 	font-size: 14px;
+	// 	font-weight: 500;
+	// 	font-style: normal;
+	// 	font-stretch: normal;
+	// 	line-height: normal;
+	// 	letter-spacing: normal;
+	// 	text-align: center;
+	// 	color: #ebebf1;
+	// 	font-family: "Lato";
+	// }
+}
+
+@media screen and (min-width: 801px) and (max-width: 900px){
+	// .cardsfooter{
+	// 	border: solid 1px #ebebf1;
+	// 	width: 100%;
+	// 	height: 95px;
+	// 	background-color: black;
+	// 	display: flex;
+	// 	flex-direction: row;
+	// 	justify-content: space-evenly;
+	// 	align-items: center; //alinear  columna 
+	// }
+	
+	// .headCard{
+	// 	font-size: 18px;
+	// 	font-weight: 600;
+	// 	font-style: normal;
+	// 	font-stretch: normal;
+	// 	line-height: normal;
+	// 	letter-spacing: normal;
+	// 	color: #ebebf1;
+	// 	font-family: "Jura";
+	// 	text-align: center;
+	// 	margin-bottom: 10px;
+	// }
+	// .cardbody{
+	// 	font-size: 14px;
+	// 	font-weight: 500;
+	// 	font-style: normal;
+	// 	font-stretch: normal;
+	// 	line-height: normal;
+	// 	letter-spacing: normal;
+	// 	text-align: center;
+	// 	color: #ebebf1;
+	// 	font-family: "Lato";
+	// }	
+}
+
+@media screen and (min-width: 901px) and (max-width: 1140px){
+// 	.cardsfooter{
+// 		border: solid 1px #ebebf1;
+// 		width: 100%;
+// 		height: 95px;
+// 		background-color: black;
+// 		display: flex;
+// 		flex-direction: row;
+// 		justify-content: space-evenly;
+// 		align-items: center; //alinear  columna 
+// 	}
+	
+// 	.headCard{
+// 		font-size: 18px;
+// 		font-weight: 600;
+// 		font-style: normal;
+// 		font-stretch: normal;
+// 		line-height: normal;
+// 		letter-spacing: normal;
+// 		color: #ebebf1;
+// 		font-family: "Jura";
+// 		text-align: center;
+// 		margin-bottom: 10px;
+// 	}
+// 	.cardbody{
+// 		font-size: 14px;
+// 		font-weight: 500;
+// 		font-style: normal;
+// 		font-stretch: normal;
+// 		line-height: normal;
+// 		letter-spacing: normal;
+// 		text-align: center;
+// 		color: #ebebf1;
+// 		font-family: "Lato";
+// 	}
+//    }
+
+ }
+}
