--- a/src/app/home/presentation/organism/Market/market.scss
+++ b/src/app/home/presentation/organism/Market/market.scss
@@ -82,7 +82,7 @@
  
   
   
-  @media screen and (min-width: 365px) and (max-width: 480px){
+  @media screen and (min-width: 365px) and (max-width: 576px){
 	 
 	.section-Rocket{
 		align-items: center;
@@ -116,7 +116,7 @@
   }
   
   
-  @media screen and (min-width: 481px) and (max-width: 600px){
+  @media screen and (min-width: 577px) and (max-width: 600px){
 	  
 	.section-Rocket{
 		align-items: center;
@@ -141,7 +141,7 @@
 		 display: grid;
 		 grid-template-columns: repeat(2, 1fr);
 		 grid-template-rows: repeat(2, 1fr);
-		 gap: 10px;
+		 gap: 30px;
 		 align-items: center;
 		 justify-items: center;
 	 }
@@ -178,6 +178,37 @@
 		 gap: 10px;
 		 align-items: center;
 		 justify-items: center;
+		 
 	 }
   }
+
+  @media screen and (min-width: 1000px) and (max-width: 1440px){
+	.section-Rocket{
+		align-items: center;
+		text-align: center;
+		margin-bottom: 50px;
+	 }
+	 .Title-Market{
+	
+		font-size: 32px;
+		padding: 8px;
+	 }
+	 .IconRocket{
+		align-items: center;
+	 }
+	 .empowerment{
+		font-size: 22px;
+		padding: 20px;
+	 }
+	 .grid-icon{
+		 display: grid;
+		 grid-template-columns: repeat(2, 1fr);
+		 grid-template-rows: repeat(2, 1fr);
+		 gap: 10px;
+		 align-items: center;
+		 justify-items: center;
+		//  width: 200px;
+	 }
+  }
+  
   
