--- a/src/app/home/presentation/organism/events-start/eventStart.scss
+++ b/src/app/home/presentation/organism/events-start/eventStart.scss
@@ -322,6 +322,51 @@
 
 }
 
+@media screen and (min-width: 1000px) and (max-width: 1440px){
+	
+
+	.container-event{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+		padding: 5px;
+	   }	
+	   .title-event{
+	   font-size: 52px;
+	   width: 100%;
+	   }
+   
+	   .paragraph-event{
+		   font-size: 24px;
+		   line-height: 25px;
+		   width: 80%;
+		
+	   }
+   
+	   .image-event{
+	   display: flex;
+	   justify-content: center; 
+	   width: 650px;
+
+	   }
+   
+	   .risk-section{
+		text-align: center;
+		width: 100%;
+		font-size: 16px;
+		color: #fff !important;
+		font-weight: 300;
+		line-height: 23px;
+		margin-top: 15px;
+		padding-left: 0px;
+	   padding-right: 0px;
+	   }
+
+
+
+}
+
 
 
 
