--- a/src/components/molecules/component-Market/componentMarket.scss
+++ b/src/components/molecules/component-Market/componentMarket.scss
@@ -113,3 +113,23 @@
 	}
 
   }
+
+  @media screen and (min-width: 1000px) and (max-width: 1440px){
+	
+	.ComponentMarket{
+		width: 100%;
+	}
+
+	.paragraph-body2{
+		width: 400px;
+
+	}
+
+	.title-2{
+		padding: 8px;
+		font-size: 18px;
+		width: 100%;
+
+	}
+
+  }
