--- a/src/app/home/presentation/organism/events-start/eventStart.scss
+++ b/src/app/home/presentation/organism/events-start/eventStart.scss
@@ -352,7 +352,7 @@
 	   }
    
 	   .risk-section{
-		text-align: center;
+		text-align: left;
 		width: 100%;
 		font-size: 16px;
 		color: #fff !important;
