feat: creation of factory component and modification of icons

--- a/src/app/home/presentation/organism/menu-tab/menuTab.scss
+++ b/src/app/home/presentation/organism/menu-tab/menuTab.scss
@@ -4,11 +4,6 @@
   background-color: black;
   }
   
-//   .menu-item {
-
-
-//   }
-  
   .menu-item:hover {
-	background-color: #eaeaea;
+	background-color: #d19fe8;
   }
