feat: component creation cardsmall, startupsection, molecule creation set-interval, component modification, global scss, page, market, cardstart, faqcomponent, header, investor and menutab

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -6,8 +6,13 @@
   --font-family: 'Jura', sans-serif;
 
   /**Borders and border-radius*/
-  --border-radius-card: 9px;
+  --border-radius-card: 10px;
   --border-card: 1px;
+  --border-radius-box:5px;
+  --border-box: 1px;
+  --border-radius-sidebar:9px;
+  --border-sidebar:1px;
+ 
 }
 body{
   margin: 0px;
