--- a/src/app/home/presentation/organism/investor/investor.scss
+++ b/src/app/home/presentation/organism/investor/investor.scss
@@ -23,7 +23,7 @@
 	
   }
   
-  .conters {
+  .counters{
 	padding: 30px 0px 30px 0px;
 	font-family: 'Lato';
 	height: 115px;
@@ -91,7 +91,7 @@
 		text-align: center;
 	}
 	
-	.conters {
+	.counters {
 		display: flex;
 		flex-direction: column;
 		font-size: 20px;
@@ -122,7 +122,7 @@
 		width: 95%;
 	}
 	
-	.conters {
+	.counters {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		grid-template-rows: 1fr 1fr;
@@ -153,7 +153,7 @@
 		width: 95%;
 		}
 
-		.conters {
+		.counters {
 			font-size: 15px;
 			line-height: 15px;
 			width: 100%;
@@ -183,7 +183,7 @@
 		margin: 0 auto;
 	}
 
-	.conters {
+	.counters {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		grid-template-rows: 1fr 1fr;
